app-deployment.yaml
##
## You provide this
##
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recc-app
spec:
  selector:
    matchLabels:
      app: recc-app
  replicas: 1
  template:
    metadata:
      labels:
        app: recc-app
    spec:
      containers:
      - name: recc-app
        image: gcr.io/southern-surge-289519/recc-app:latest
        resources:
          requests:
            cpu: 100m
            memory: 400Mi
        ports:
        - containerPort: 8501
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8501
          initialDelaySeconds: 5
          periodSeconds: 10
---
