app-service.yaml
##
## You provide this
##

apiVersion: v1
kind: Service
metadata:
    name: recc-app
    annotations:
        cloud.google.com/backend-config: '{"default": "app-ingress-backendconfig"}'
    labels:
        app: recc-app
spec:
    type: NodePort
    selector:
        app: recc-app
    ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
